Fixing address and copyright on mobile best as I can

--- a/app/scss/_overrides.scss
+++ b/app/scss/_overrides.scss
@@ -364,12 +364,26 @@ footer {
 // Small-sized screens only
 @media #{$screen} and (max-width: #{upper-bound($small-range)})
 {
-	footer .columns {
-		padding-left: 0;
-		padding-right: 0;
-	}
-	#social-media-icons, #address {
+	footer {
+    .columns,
+    .column {
+      // background: $mediumGrey;
+  		padding-left: 0;
+  		padding-right: 0;
+  	}
+    #address,
+    #copyright {
+      background: $mediumGrey;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      text-align: left;
+    }
+  }
+	#social-media-icons,
+  #address,
+  #copyright {
 		width: 100%;
+    padding: 0.5rem;
 	}
 }
 
